@@ -1,5 +1,12 @@
 2008-02-05  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valaclass.vala: improve error reporting for properties,
+	  fixes bug 514326
+
+	* tests/classes-properties.vala: fix test case
+
+2008-02-05  Jürg Billeter  <j@bitron.ch>
+
 	* gobject/valaccodeassignmentbinding.vala,
 	  gobject/valaccodegenerator.vala: don't use construction properties
 	  for classes not deriving from GObject, fixes bug 514323
